<resources>
    <string name="facebook_app_id">260260364770676</string>
    <string name="fb_login_protocol_scheme">fb260260364770676</string>
    <string name="server_client_id">220914111240-p6ubq3qi57dpuum3q1tgfc225m1eau9a.apps.googleusercontent.com</string>

    <string name="app_name">iPulsus Running</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="no_account_click_prompt">Create an account</string>
    <string name="proceed_without_account">Continue without an account</string>
    <string name="health_index">Health index</string>
    <string name="just_now">Just now</string>
    <string name="time_ago">Just now.</string>
    <string name="yesterday">Yesterday</string>
    <string name="heart_rate">Heart rate</string>
    <string name="average">Average: %s</string>
    <string name="standart">Baseline: %s</string>
    <string name="HRV">HRV</string>
    <string name="hrv_frequency_bands">HRV Frequency-Domain results</string>
    <string name="after_this_measurement">After this measurement</string>
    <string name="HF">HF: </string>
    <string name="terms_and_conditions_link"><u>I have read and agree to the Terms and Conditions</u></string>
    <string name="LF">LF: </string>
    <string name="VLF">VLF: </string>
    <string name="standarts">Baselines</string>
    <string name="devices">Devices</string>
    <string name="scan">Scan</string>
    <string name="already_scanning">Scanning…</string>
    <string name="today">Today</string>
    <string name="history">History</string>
    <string name="hrv">HRV</string>
    <string name="measure">Measure.</string>
    <string name="measure_with_camera">Measure with camera</string>
    <string name="got_it">Got it.</string>

    <string name="training_intensity_0">Low (Ex. Walking)</string>
    <string name="training_intensity_1">Easy (Ex. Eastern exercise)</string>
    <string name="training_intensity_2">Medium (Ex. Riding a bike)</string>
    <string name="training_intensity_3">Hard (Ex. Basketball)</string>
    <string name="training_intensity_4">Extremely hard (Ex. Swimming)</string>

    <string name="training_duration_0">Less than 10min</string>
    <string name="training_duration_1">10–20min</string>
    <string name="training_duration_2">20–30min</string>
    <string name="training_duration_3">More than 30min</string>

    <string name="training_frequency_0">Less than 1 time/month</string>
    <string name="training_frequency_1">Few times per month.</string>
    <string name="training_frequency_2">1–2 times/week</string>
    <string name="training_frequency_3">3–5 times/week</string>
    <string name="training_frequency_4">6–7 times/week</string>
    <string name="no_device">No device</string>
    <string name="measurement_is_over">Measurement is done.</string>
    <string name="review_btn">Review</string>
    <string name="measure_btn">Measure</string>
    <string name="failed_connection_status">Unable to connect…</string>
    <string name="connecting_to">Connecting to…</string>
    <string name="already_measured_today_message">You have already measured today. Do you want to measure it again?</string>
    <string name="please_wait">Please wait.</string>
    <string name="measuring">Measuring…</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_intro_initial_day_selection">IntroInitialDaySelection</string>
    <string name="choose_workout_days">Which days of the week can you do sports?</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="please_select_gender">Please choose your gender.</string>
    <string name="select_at_least_two_days">You have to select atleast two days.</string>
    <string name="how_long_can_you_work_out">How long are you willing to work out?</string>
    <string name="weekly_program">Weekly program</string>
    <string name="program_downgraded">Your HRV is abnormally low. Suggesting to ease down today.</string>
    <string name="program_upgraded">Your HRV is elevated. Suggesting you work out harder today.</string>
    <string name="program_unchanged">Your HRV is normal. Not altering your workout.</string>
    <string name="todays_program_subtext">Today we recommend you</string>
    <string name="bpm_rate">BPM and RMSSD data</string>
    <string name="txt_average_bpm">Average BPM</string>
    <string name="txt_average_rmssd">Average RMSSD</string>
    <string name="txt_what_gender">What is your gender?</string>
    <string name="txt_activity_index_question">How often do you work out?</string>
    <string name="initial_what_is_your_height">What\'s your height?</string>
    <string name="initial_when_is_your_birthday">When\'s your birthday?</string>
    <string name="initial_what_is_your_weight">What\'s your weight?</string>
    <string name="initial_ask_user_info">One more thing.\n\n We kindly ask you to provide additional information to generate your personal training program. It will only take two minutes!</string>
    <string name="initial_start_btn">Let\'s get started.</string>
    <string name="logout">Log out</string>
    <string name="initial_continue_btn">Next</string>
    <string name="initial_how_much_do_you_workout">How much time do you workout?</string>
    <string name="initial_what_is_your_intensity">What\'s your intensity?</string>
    <string name="txt_hrv_increase">+14 % \n increase</string>
    <string name="txt_duration">30 min</string>
    <string name="txt_suggestion">Your HRV is elevated. Suggesting to workout harder</string>
    <string name="start_your_workout">Start workout.</string>
    <string name="txt_pulse_zone">1st-2nd pulse zone</string>
    <string name="txt_how_do_you_feel">How are you feeling today?</string>
    <string name="negatively_excited">Negatively excited</string>
    <string name="negatively_mellow">Negatively mellow</string>
    <string name="neutral">Neutral</string>
    <string name="positively_mellow">Positively mellow</string>
    <string name="positively_excited">Positively excited</string>
    <string name="end_training">End training</string>
    <string name="start_training">Start training</string>
    <string name="lost_connection">Lost connection</string>
    <string name="do_you_really_want_to_stop_training_prompt">Are you sure you want to cancel your workout? The progress will be lost.</string>
    <string name="no">No</string>
    <string name="end">Finish</string>
    <string name="workout">Workout</string>
    <string name="min">min</string>
    <string name="VHF">VHF: </string>
    <string name="jogging">Jogging</string>
    <string name="walking">Walking</string>
    <string name="repeat_password">Re-enter password</string>
    <string name="register">Register</string>
    <string name="info_txt">During the measurement stay calm and quiet</string>
    <string name="warmup">Warm-up</string>
    <string name="bpm_data_after_workout">Workout BPM data</string>
    <string name="txt_max_bpm_history">Max BPM</string>
    <string name="duration_info">The recommended duration of your workout\nbased on your HRV.</string>
    <string name="hrv_info">Your HRV today in comparison to the last time you measured.</string>
    <string name="intensity_info">The recommended pulse range of your workout.</string>
    <string name="rmssd_info">RMSSD is a measure used to assess heart rate variability (HRV).</string>
    <string name="workout_card_info">Basic information about your last workout.</string>
    <string name="frequencies_info">Spectral analysis of your measurements enables us to analyze your nervous system\'s condition.</string>
    <string name="pulse_distribution">Pulse zone is simply a range of heart rate. These ranges vary based on your age, weight and gender. This graph shows what pulse zones your heart rate was in during the workout.</string>
    <string name="change_workout_schedule_option_subtext">Alter your workout schedule</string>
    <string name="change_workout_schedule_option_text">Change workout days</string>
    <string name="change_height_option_text">Change your height</string>
    <string name="change_height_option_subtext">Make sure the information is up-to-date</string>
    <string name="change_weight_option_text">Change your weight</string>
    <string name="change_weight_option_subtext">Make sure the information is up-to-date</string>
    <string name="logout_option_subtext">Switch your account</string>
    <string name="info_vibration_explanation">If you turn this feature on, throughout your workout we will help you to stay in recommended pulse zone by vibration indications.</string>
    <string name="personalised_workout_explanation">Right now your workout is generated based on Classical Aerobics Theory. If you want unique workout plan generated for you, please measure your \'HRV\' and come back.</string>
    <string name="personalised_workout_explanation_title">What is personalized workout?</string>
    <string name="reccomended_workout_duration_explanation">This is the recommended duration of your workout.</string>
    <string name="reccomended_pulse_zone_explanation">This is recommended pulse zone of your workout.</string>
    <string name="ideal_ratio">Ideal balance.</string>
    <string name="ideal_ratio_explanation">Your body is feeling great, keep it up.</string>
    <string name="stressed_ratio">Your body starts to feel stressed.</string>
    <string name="stressed_ratio_explanation">Consider some relaxation exercises and not pushing yourself too hard today.</string>
    <string name="recovering_ratio">Your body is recovering.</string>
    <string name="recovering_ratio_explanation">Consider doing some non-stressful activities with higher intensity during your daily schedule.</string>
    <string name="pressure_ratio">Your body is under pressure.</string>
    <string name="pressure_ratio_explanation">Ratio indicates anxiety, stress, pressure. You should reduce your work load and physical activities.</string>
    <string name="exhausted_ratio">Your body is exhausted.</string>
    <string name="exhausted_ratio_explanation">Ratio indicates low energy and exhaustion. You should consider taking a day off and relaxing.</string>
    <string name="hrv_definition">One of the heart activity parameter, which evaluates heart beat consistency in time</string>
    <string name="hrv_definition_title">What is HRV?</string>
    <string name="hrv_representation_title">What does it represent?</string>
    <string name="hrv_representation_info">Heart rate variability is one of the indicators of the state of your health and fitness, cardiac stress, recovery and readiness</string>
    <string name="hrv_usage_title">How do we use it?</string>
    <string name="hrv_usage_description">We use HRV data to generate the most optimal workout for you</string>
    <string name="nervous_system_info_title">What is sympathetic/parasympathetic nervous system?</string>
    <string name="nervous_system_info_description">Sympathetic is responsible for the response commonly referred to as \'fight or flight,\' while parasympathetic is referred to as \'rest and digest.\'</string>
    <string name="bpm_info_text">The amout of times your heart beats in a minute.</string>
    <string name="reccomended_days_notice">We recommend to work out on mondays, tuesdays, thursdays and fridays.</string>
    <string name="short_measurement_duration_notice">Measurements of less than three minutes are insufficient to perform spectral analysis or calculate accurate HRV. Please consider increasing measurement duration.</string>
    <string name="measure_anyway">Measure anyway</string>

</resources>

