<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="com.mabe.productions.hrv_madison.initialInfo.IntroInitialDaySelection">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_workout_days"
        android:padding="8dp"
        android:gravity="center"
        android:textColor="#FFF"
        android:textSize="35dp"
        android:layout_marginTop="40dp"
        android:id="@+id/txt_what_is_your_workout_routine"/>



    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="310dp"
        android:orientation="vertical"
        android:layout_below="@+id/txt_what_is_your_workout_routine"
        android:weightSum="7"
        android:id="@+id/day_selection_layout"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:id="@+id/btn_monday"
            android:text="@string/monday"
            android:layout_weight="1"
            android:textSize="13dp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button_gradient"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:id="@+id/btn_tuesday"
            android:textAllCaps="false"
            android:text="@string/tuesday"
            android:layout_weight="1"
            android:textSize="13dp"
            android:textColor="#fff"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button_gradient"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:id="@+id/btn_wednesday"
            android:textSize="13dp"
            android:text="@string/wednesday"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_socialmedia"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:text="@string/thursday"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:id="@+id/btn_thursday"
            android:textColor="#fff"
            android:textSize="13dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button_gradient"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:text="@string/friday"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:id="@+id/btn_friday"
            android:textSize="13dp"
            android:textColor="#fff"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button_gradient"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:text="@string/saturday"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:textSize="13dp"
            android:textColor="#fff"
            android:id="@+id/btn_saturday"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_socialmedia"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:text="@string/sunday"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="13dp"
            android:textAllCaps="false"
            android:id="@+id/btn_sunday"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_socialmedia"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reccomended_days_notice"
        android:padding="8dp"
        android:gravity="center"
        android:textColor="#FFF"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/day_selection_layout"
        android:id="@+id/reccomended_days_notice"/>


    <Button
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:background="#003e5266"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:text="@string/initial_continue_btn"
        android:onClick="start"
        android:textAllCaps="false"
        android:id="@+id/initial_btn_continue_day_selection"
        android:textSize="13dp"
        android:textColor="#F62459"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
