<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:layout_height="match_parent"
    tools:context="com.mabe.productions.pr_ipulsus_running.initialInfo.IntroInitialActivityIndex">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_activity_index_question"
            android:gravity="center"
            android:textColor="#FFF"
            android:id="@+id/training_frequency_question"
            android:textSize="25dp"
            android:layout_marginTop="30dp"/>

        <com.jaygoo.widget.RangeSeekBar
            android:id="@+id/training_frequency"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:rsb_gravity="center"
            app:rsb_mode="single"
            app:rsb_progress_color="@color/colorAccent"
            app:rsb_step_auto_bonding="true"
            app:rsb_step_color="@color/colorAccent"
            app:rsb_step_height="15dp"
            app:rsb_step_radius="4dp"
            app:rsb_step_width="15dp"
            app:rsb_steps="4"
            app:rsb_thumb_drawable="@drawable/thumb_yellow_stroke"
            app:rsb_tick_mark_mode="other" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_frequency_0"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:id="@+id/training_frequency_explanation"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_how_much_do_you_workout"
            android:gravity="center"
            android:id="@+id/training_duration_question"
            android:textColor="#FFF"
            android:textSize="25dp"
            android:layout_marginTop="30dp"/>

        <com.jaygoo.widget.RangeSeekBar
            android:id="@+id/training_duration"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:rsb_gravity="center"
            app:rsb_mode="single"
            app:rsb_progress_color="@color/colorAccent"
            app:rsb_step_auto_bonding="true"
            app:rsb_step_color="@color/colorAccent"
            app:rsb_step_height="15dp"
            app:rsb_step_radius="4dp"
            app:rsb_step_width="15dp"
            app:rsb_steps="3"
            app:rsb_thumb_drawable="@drawable/thumb_yellow_stroke"
            app:rsb_tick_mark_mode="other" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_duration_0"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:id="@+id/training_duration_explanation"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_what_is_your_intensity"
            android:gravity="center"
            android:textColor="#FFF"
            android:id="@+id/activity_index_question"
            android:textSize="25dp"
            android:layout_marginTop="30dp"/>

        <com.jaygoo.widget.RangeSeekBar
            android:id="@+id/activity_index"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:rsb_gravity="center"
            app:rsb_mode="single"
            app:rsb_progress_color="@color/colorAccent"
            app:rsb_step_auto_bonding="true"
            app:rsb_step_color="@color/colorAccent"
            app:rsb_step_height="15dp"
            app:rsb_step_radius="4dp"
            app:rsb_step_width="15dp"
            app:rsb_steps="4"
            app:rsb_thumb_drawable="@drawable/thumb_yellow_stroke"
            app:rsb_tick_mark_mode="other" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_intensity_0"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:id="@+id/activity_index_explanation"/>




    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:text="@string/initial_continue_btn"
        android:onClick="next"
        style="@style/IpulsusButton"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:id="@+id/initial_continue_activity_index"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
